--- a/services/user/.example.env
+++ b/services/user/.example.env
@@ -9,3 +9,6 @@ DB_TIMEOUT=60s
 
 SERVER_IP=localhost
 SERVER_PORT=9999
+
+OTLP_GRPC_EXPORTER_ADDRESS=localhost:4317
+PROMETHEUS_ADDRESS=localhost:9090
