feat(authz): add Dockerfile and docker compose file

--- a/services/authorization/Makefile
+++ b/services/authorization/Makefile
@@ -1,21 +1,21 @@
-.PHONY: build build.image
+.PHONY: build build.image.server
 build:
 	go build -o build/server "./cmd/server/"
 	go build -o build/migrate "./cmd/migrate/"
-	go build -o build/seed_perms "./cmd/seed_perms/"
+	go build -o build/seed "./cmd/seed/"
 
-build.image:
-	.
+build.image.server:
+	docker build -f ./docker/app.Dockerfile -t nexa-authorization:latest .
 
 run: build
-	@export NEXA_USER_RELEASE=1; \
+	@export NEXA_AUTHZ_RELEASE=1; \
 	./build/server
 
 migrate: build
 	@./build/migrate
 
-seed.perms: build
-	@./build/seed_perms
+seed: build
+	@./build/seed
 
 clean:
 	@go clean
