--- a/services/authorization/.example.env
+++ b/services/authorization/.example.env
@@ -1,11 +1,12 @@
-DB_PROTOCOL=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=username
-DB_PASSWORD=password
-DB_NAME=authorization_db
-DB_PARAMETER=sslmode=disable&application_name=nexa-authorization
-DB_TIMEOUT=60s
+PG_ADDRESS=localhost:5432
+PG_USERNAME=username
+PG_PASSWORD=password
+PG_DB_NAME=authorization_db
+PG_PARAMETER=sslmode=disable&application_name=nexa-authorization
+PG_TIMEOUT=60s
 
 SERVER_IP=localhost
-SERVER_PORT=9999
+SERVER_PORT=8080
+METRIC_PORT=8081
+
+OTLP_GRPC_COLLECTOR_ADDRESS=localhost:4317
