--- a/services/user/.example.env
+++ b/services/user/.example.env
@@ -1,14 +1,13 @@
-DB_PROTOCOL=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=username
-DB_PASSWORD=password
-DB_NAME=user_db
-DB_PARAMETER=sslmode=disable&application_name=nexa-user
-DB_TIMEOUT=60s
+PG_ADDRESS=localhost:5432
+PG_USERNAME=username
+PG_PASSWORD=password
+PG_NAME=user_db
+PG_PARAMETER=sslmode=disable&application_name=nexa-user
+PG_TIMEOUT=60s
 
 SERVER_IP=localhost
-SERVER_PORT=9999
+SERVER_PORT=8080
+METRIC_PORT=8081
 
 OTLP_GRPC_EXPORTER_ADDRESS=localhost:4317
 PROMETHEUS_ADDRESS=localhost:9090
