--- a/services/file_storage/docker-compose.yml
+++ b/services/file_storage/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  db:
+  file-db:
     image: postgres
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U nexa -d nexa-file" ]
@@ -26,28 +26,11 @@ services:
     command: server /data
     networks:
       - nf_network
-  jaeger:
-    image: jaegertracing/all-in-one:1.58
-    ports:
-      - 6831:6831/udp
-      - 6832:6832/udp
-      - 5778:5778
-      - 16686:16686
-      - 4317:4317
-      - 4318:4318
-      - 14250:14250
-      - 14268:14268
-      - 14269:14269
-      - 9411:9411
-    environment:
-      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
-    networks:
-      - nf_network
   nexa-storage-migrate:
     build:
       dockerfile: ./docker/migrate.Dockerfile
     depends_on:
-      db:
+      file-db:
         condition: service_healthy
     environment:
       - PG_ADDRESS=db
@@ -61,14 +44,16 @@ services:
     build:
       dockerfile: ./docker/app.Dockerfile
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "grpc_health_probe", "-addr=localhost:8080"]
+      retries: 3
+      interval: 60s
+      start_period: 5s
+      timeout: 30s
     depends_on:
       nexa-storage-migrate:
         condition: service_completed_successfully
         restart: false
-      jaeger:
-        condition: service_started
-      prometheus:
-        condition: service_started
       minio:
         condition: service_healthy
     environment:
@@ -78,10 +63,11 @@ services:
       - PG_DB_NAME=nexa-file
       - PG_PARAMETER=application_name=nexa-file
       - PG_IS_SECURE=false
-      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
+      - BUCKET_NAME=something
       - MINIO_ADDRESS=minio:9000
       - MINIO_ACCESS_KEY_ID=root
       - MINIO_SECRET_KEY=rootroot123
+#      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
     ports:
       - "8080:8080"
       - "8081"
