--- a/services/authorization/docker-compose.dev.yml
+++ b/services/authorization/docker-compose.dev.yml
@@ -1,14 +1,17 @@
 services:
-  db:
+  authz-db:
     image: postgres
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U nexa -d nexa-authz" ]
-      interval: 5s
-      retries: 10
+      interval: 10s
+      retries: 5
+      timeout: 30s
     environment:
       - POSTGRES_DB=nexa-authz
       - POSTGRES_USER=nexa
       - POSTGRES_PASSWORD=nexa
+    ports:
+      - "5432:5432"
     networks:
       - naz_network
   jaeger:
@@ -24,31 +27,29 @@ services:
       - 14268:14268
       - 14269:14269
       - 9411:9411
-    environment:
-      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
     networks:
       - naz_network
-  nexa-auth-migrate:
+  nexa-authz-migrate:
     build:
       dockerfile: ./docker/migrate.Dockerfile
     depends_on:
-      db:
+      authz-db:
         condition: service_healthy
     environment:
-      - PG_ADDRESS=db
+      - PG_ADDRESS=authz-db
       - PG_USERNAME=nexa
       - PG_PASSWORD=nexa
       - PG_DB_NAME=nexa-authz
       - PG_IS_SECURE=false
     networks:
       - naz_network
-  nexa-auth-seed:
+  nexa-authz-seed:
     build:
       dockerfile: ./docker/seed.Dockerfile
     depends_on:
-      db:
+      authz-db:
         condition: service_healthy
-      nexa-auth-migrate:
+      nexa-authz-migrate:
         condition: service_completed_successfully
         restart: false
     environment:
@@ -57,32 +58,6 @@ services:
       - PG_PASSWORD=nexa
       - PG_DB_NAME=nexa-authz
       - PG_IS_SECURE=false
-    networks:
-      - naz_network
-  nexa-authz:
-    build:
-      dockerfile: ./docker/app.Dockerfile
-    restart: unless-stopped
-    depends_on:
-      nexa-auth-seed:
-        condition: service_completed_successfully
-        restart: false
-      nexa-auth-migrate:
-        condition: service_completed_successfully
-        restart: false
-      jaeger:
-        condition: service_started
-    environment:
-      - PG_ADDRESS=db
-      - PG_USERNAME=nexa
-      - PG_PASSWORD=nexa
-      - PG_DB_NAME=nexa-authz
-      - PG_PARAMETER=application_name=nexa-authorization
-      - PG_IS_SECURE=false
-      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
-    ports:
-      - "8080:8080"
-      - "8081"
     networks:
       - naz_network
 networks:
