--- a/services/authentication/docker-compose.dev.override.yml
+++ b/services/authentication/docker-compose.dev.override.yml
@@ -13,6 +13,14 @@ services:
       - "8082:8080"
     networks:
       - nan_network
+  nexa-storage-seed:
+    depends_on:
+      nexa-authz:
+        condition: service_healthy
+    environment:
+      - AUTHZ_SERVICE_ADDR=nexa-authz:8080
+    networks:
+      - nan_network
   nexa-storage:
     environment:
       - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
