fix(relation): bug fix

--- a/services/relation/.example.env
+++ b/services/relation/.example.env
@@ -15,3 +15,5 @@ OTLP_GRPC_EXPORTER_ADDRESS=localhost:4317
 #HALF_STATE_MAX_REQUEST=
 #HALF_STATE_RESET_INTERVAL=
 #OPEN_STATE_TIMEOUT=
+
+USER_SERVICE_ADDRESS=localhost:8080
