--- a/services/relation/docker-compose.yml
+++ b/services/relation/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - PG_IS_SECURE=false
     networks:
       - nr_network
-  token_generator:
+  relation-token_generator:
     build:
       context: ../../token_generator/
       dockerfile: Dockerfile
@@ -40,7 +40,7 @@ services:
     depends_on:
       nexa-relation-migrate:
         condition: service_completed_successfully
-      token_generator:
+      relation-token_generator:
         condition: service_completed_successfully
 #      nexa-authz:
 #        condition: service_healthy
