fix(post): bug fixes

--- a/services/post/.example.env
+++ b/services/post/.example.env
@@ -1,8 +1,8 @@
 PG_ADDRESS=localhost:5432
 PG_USERNAME=username
 PG_PASSWORD=password
-PG_NAME=user_db
-PG_PARAMETER=sslmode=disable&application_name=nexa-relation
+PG_NAME=post_db
+PG_PARAMETER=sslmode=disable&application_name=nexa-post
 PG_TIMEOUT=60s
 
 SERVER_IP=localhost
@@ -16,4 +16,5 @@ OTLP_GRPC_EXPORTER_ADDRESS=localhost:4317
 #HALF_STATE_RESET_INTERVAL=
 #OPEN_STATE_TIMEOUT=
 
-REACTION_SERVICE_ADDR=localhost:8080
+RELATION_SERVICE_ADDRESS=localhost:8082
+FILE_STORAGE_SERVICE_ADDRESS=localhost:8083
