--- a/services/comment/docker-compose.dev.override.yml
+++ b/services/comment/docker-compose.dev.override.yml
@@ -1,12 +1,24 @@
 services:
+  # For seeding
   nexa-authz:
     environment:
       - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
     ports:
-      - "8082:8080"
+      - "8085:8080"
     networks:
       - nc_network
-  nexa-reaction-seed:
+  nexa-authn:
+    environment:
+      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
+      - AUTHZ_SERVICE_ADDR=nexa-authz:8080
+      - TOKEN_SERVICE_ADDR=nexa-token:8080
+      - FILE_STORAGE_SERVICE_ADDR=nexa-storage:8080
+      - MAILER_SERVICE_ADDR=nexa-mailer:8080
+    ports:
+      - "8086:8080"
+    networks:
+      - nc_network
+  nexa-authn-seed:
     depends_on:
       nexa-authz:
         condition: service_healthy
@@ -14,10 +26,75 @@ services:
       - AUTHZ_SERVICE_ADDR=nexa-authz:8080
     networks:
       - nc_network
-  nexa-reaction:
+  nexa-token:
+    environment:
+      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
+    ports:
+      - "8082:8080"
+    networks:
+      - nc_network
+  nexa-storage-seed:
+    depends_on:
+      nexa-authz:
+        condition: service_healthy
+    environment:
+      - AUTHZ_SERVICE_ADDR=nexa-authz:8080
+    networks:
+      - nc_network
+  nexa-storage:
     environment:
       - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
     ports:
       - "8083:8080"
+    networks:
+      - nc_network
+  nexa-mailer-seed:
+    depends_on:
+      nexa-authz:
+        condition: service_healthy
+    environment:
+      - AUTHZ_SERVICE_ADDR=nexa-authz:8080
+    networks:
+      - nc_network
+  nexa-mailer:
+    env_file:
+      - ../mailer/dev.smtp.env
+    environment:
+      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
+    ports:
+      - "8084:8080"
+    networks:
+      - nc_network
+  nexa-relation-seed:
+    depends_on:
+      nexa-authz:
+        condition: service_healthy
+    environment:
+      - AUTHZ_SERVICE_ADDR=nexa-authz:8080
+    networks:
+      - nc_network
+  nexa-relation:
+    environment:
+      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
+      - USER_SERVICE_ADDRESS=nexa-authn:8080
+    ports:
+      - "8087:8080"
+    networks:
+      - nc_network
+  nexa-post-seed:
+    depends_on:
+      nexa-authz:
+        condition: service_healthy
+    environment:
+      - AUTHZ_SERVICE_ADDR=nexa-authz:8080
+    networks:
+      - nc_network
+  nexa-post:
+    environment:
+      - OTLP_GRPC_COLLECTOR_ADDRESS=jaeger:4317
+      - RELATION_SERVICE_ADDRESS=nexa-relation:8080
+      - FILE_STORAGE_SERVICE_ADDRESS=nexa-storage:8080
+    ports:
+      - "8088:8080"
     networks:
       - nc_network
