--- a/services/comment/docker-compose.yml
+++ b/services/comment/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - PG_PARAMETER=application_name=nexa-authn
       - PG_IS_SECURE=false
 #      - OTLP_GRPC_COLLECTOR_ADDRESS=
-#      - REACTION_SERVICE_ADDRESS=
+#      - POST_SERVICE_ADDRESS=
 
 networks:
   nc_network:
