fix(reaction): buf fixes

--- a/services/reaction/.example.env
+++ b/services/reaction/.example.env
@@ -15,3 +15,6 @@ OTLP_GRPC_EXPORTER_ADDRESS=localhost:4317
 #HALF_STATE_MAX_REQUEST=
 #HALF_STATE_RESET_INTERVAL=
 #OPEN_STATE_TIMEOUT=
+
+POST_SERVICE_ADDRESS=localhost:8088
+COMMENT_SERVICE_ADDRESS=localhost:8089
