--- a/services/mailer/docker-compose.yml
+++ b/services/mailer/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - PG_DB_NAME=nexa-mail
       - PG_PARAMETER=application_name=nexa-mailer
       - PG_IS_SECURE=false
+#      - FILE_STORAGE_SERVICE_ADDRESS=
 #      - SMTP_HOST=
 #      - SMTP_PORT=
 #      - SMTP_USERNAME=
