--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,24 +5,18 @@ global:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets:
+        - 'localhost:9090'
 
-  - job_name: 'nexa-authz'
+  - job_name: 'nexa'
     static_configs:
-      - targets: ['nexa-authz:8081']
-
-  - job_name: 'nexa-authn'
-    static_configs:
-      - targets: [ 'nexa-authn:8081' ]
-
-  - job_name: 'nexa-file_storage'
-    static_configs:
-      - targets: [ 'nexa-storage:8081' ]
-
-  - job_name: 'nexa-mailer'
-    static_configs:
-      - targets: [ 'nexa-mailer:8081' ]
-
-  - job_name: 'nexa-token'
-    static_configs:
-      - targets: [ 'nexa-token:8081' ]
+      - targets:
+        - 'nexa-authz:8081'
+        - 'nexa-authn:8081'
+        - 'nexa-comment:8081'
+        - 'nexa-storage:8081'
+        - 'nexa-mailer:8081'
+        - 'nexa-post:8081'
+        - 'nexa-reaction:8081'
+        - 'nexa-relation:8081'
+        - 'nexa-token:8081'
